# Peachtree-Roofing-Blog-Automation

./: .env.template  .gitignore  CHANGELOG.md  CURSOR_HANDOFF.md  README.md  _entry.py  approve.py  approve_listen.py  approve_listen_llama70b.py  approve_listen_qwen397b.py  clean_output.py  draft_pdf.py  evaluate.py  pipeline.py  post.py  pyproject.toml  requirements.txt  search.py  search_all_roofing.py  search_less_strict.py  together_endpoint.py  used_sources.py  write.py  write_common.py  write_serverless.py  write_serverless_llama70b.py  write_serverless_qwen397b.py
.cursor/rules/: changelog.mdc
.github/workflows/: approve.yml  publish.yml  slack_approve.yml  weekly.yml
config/: psai.json
docs/: cloudflare-workers-setup.md  github-actions.md  slack-webhook-setup.md
feedback/: style_notes.txt
output/approvals/: 2026-06-05-145714-how-alpharetta-homeowners-can-shield-their-roofs-from-hurric.json
output/sources/: evaluated_sources.json  kept_sources.json  search_results.json  used_sources.json
prompts/: blog.txt  blog_before_making_more_geo.txt  blog_before_refinement.txt  blog_explainer.txt  blog_scenario.txt  evaluate.txt
resources/: Peachtree_GEO_Content_Strategy_2026 (1).docx
scripts/: archive_ci_draft.py  create_writing_endpoint.sh  notify_slack_no_draft.py  process_slack_event.py  weekly_pipeline_plan.py  weekly_pipeline_record.py  write_with_endpoint.sh
src/peachtree_blog/: __init__.py  _pycache_prefix.py  cli_progress.py  draft_approval.py  draft_pdf.py  draft_scorer.py  generated_store.py  paths.py  (+7 more)
webhook/: Dockerfile  docker-compose.yml
(+43 files in other folders)
